--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#706e67" />
         <meta name="description" content="Loversy - Wedding Photography React JS Template" />
+        <meta name="robots" content="noindex, nofollow">
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
         <!--
           manifest.json provides metadata used when your web app is installed on a
