--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,20 @@
           }(window.location))
         </script>
         <!-- End Single Page Apps for GitHub Pages -->
+
+        <!-- <script src="https://embed.typeform.com/next/embed.js"></script> -->
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-4LVZB9RXVR"></script>
+        <script>
+          if (window.location.hostname !== "localhost") {
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-4LVZB9RXVR');
+          }
+        </script>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
