--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
         <meta name="theme-color" content="#706e67" />
         <meta name="description" content="Loversy - Wedding Photography React JS Template" />
         <meta name="robots" content="noindex, nofollow">
+        <meta name="googlebot" content="noindex, nofollow" />
+        <meta name="google" content="notranslate" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-black-regular.svg" />
         <!--
           manifest.json provides metadata used when your web app is installed on a
