--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <link rel="icon" href="%PUBLIC_URL%/assets/img/favicon/favicon-16x16.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#706e67" />
-        <meta name="description" content="Loversy - Wedding Photography React JS Template" />
+        <meta name="description" content="bianca & brian" />
         <meta name="robots" content="noindex, nofollow">
         <meta name="googlebot" content="noindex, nofollow" />
         <meta name="google" content="notranslate" />
@@ -24,7 +24,7 @@
           work correctly both with client-side routing and a non-root public URL.
           Learn how to configure a non-root public URL by running `npm run build`.
         -->
-        <title>Loversy - Wedding Photography React JS Template</title>
+        <title>bianca & brian</title>
 
         <!-- Start Single Page Apps for GitHub Pages -->
         <script type="text/javascript">
