--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
         <meta name="robots" content="noindex, nofollow">
         <meta name="googlebot" content="noindex, nofollow" />
         <meta name="google" content="notranslate" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-black-regular.svg" />
         <!--
           manifest.json provides metadata used when your web app is installed on a
